# auto-feat-ml

./: README.md  docs.txt  pyproject.toml
.github/workflows/: workflow.yaml
auto_feat_ml/: __init__.py  feature_selection.py
auto_feat_ml/data_models/: feature_model.py
tests/: test_select_features.py
