[tool.poetry]
name = "auto-feat-ml"
version = "0.0.2"
description = "Automatic Feature Selection with Machine Learning for Machine Learning Classification and Regression models"
authors = ["Yannick Flores <yannick.flores1992@gmail.com>"]
readme = "README.md"
exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "4.6.*"
boto3 = "1.34.*"
boto3-stubs = {extras = ["s3"], version = "1.34.*"}
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "7.4.*"}
black = {version = "23.12.*", allow-prereleases = true}
pytest = "7.4.*"
pytest-html = "4.1.*"
pytest-cov = "4.1.*"
pylint = "3.0.*"
mkdocs = "1.5.*"
python-decouple = "3.8"
pandas = "2.1.*"
scikit-learn = "1.4.*"
ipykernel = "*"
feature_engine = "1.6.*"
matplotlib = "3.*"
mlxtend = "0.23.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"